--- a/Stage/css/styles.css
+++ b/Stage/css/styles.css
@@ -101,6 +101,7 @@ textarea{
     padding: 1% 10%;
     border-radius: 40px;
     font-size: small;
+    margin-top: 25px;
 }
 
 .article_principal button:hover{
@@ -161,7 +162,6 @@ footer{
     display: block;
     position: relative;
     bottom: 0;
-    
     background-color:  #F6F1F1;
     font-style: italic;
     font-size: small;
@@ -308,6 +308,7 @@ footer{
 
 /*Button delete*/
 .delete {
+    margin-top: 25px;
     color: #181717;
 }
 .delete:hover {
